<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/slate_800"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_post_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_a_new_post_message"
        android:textColor="@color/birbyellow"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/new_post_content"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:ems="10"
        android:maxLength="255"
        android:hint="@string/new_post_content_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_below="@id/new_post_header"
        android:autofillHints="" />

    <Button
        android:id="@+id/new_post_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_post_content"
        android:layout_marginTop="30dp"
        app:cornerRadius="90dp"
        android:onClick="newPost"
        android:text="@string/create_post_message"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/new_post_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_post_submit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/birbyellowvariant"
        android:text="@string/new_post_cancel_message"
        android:onClick="cancelNewPost"
        app:cornerRadius="90dp" />

</RelativeLayout>